сделал чтобы заголовок был активным при клике и появлялось строка ввода для задачи

--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@
     padding: 20px;
   }
 
+  .start {
+    cursor: pointer;
+  }
+
+  .title-start:hover {
+    background-color: rgb(25, 255, 25);
+  }
+
   .input-group {
     max-width: 300px;
     display: flex;
